<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".ui.first_screen.FirstScreenActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Using custom view to avoid floating label hint on TextField -->
    <com.ariqbelajar.interntest.ui.custom_view.EditTextField
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background" />

    <com.ariqbelajar.interntest.ui.custom_view.EditTextField
        android:id="@+id/ed_palindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/check"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_palindrome" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/next"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />


</androidx.constraintlayout.widget.ConstraintLayout>